@@ -83,7 +83,7 @@
 #include <httperf.h>
 #include <conn.h>
 #include <core.h>
-#include <event.h>
+#include <localevent.h>
 #include <rate.h>
 #include <session.h>
 #include <timer.h>
