@@ -1,10 +1,15 @@
 2007-06-03  Ted Bullock <tbullock@canada.com>
 
+	* event.c and event.h: Moved to localevent.c and localevent.h for integration with
+	libevent (which has a default header of event.h)
+
+2007-06-03  Ted Bullock <tbullock@canada.com>
+
 	* configure.ac: Add configuration to use libevent
 
 2007-06-03  Ted Bullock <tbullock@canada.com>
 
-	* configure.ac: Remove unnecessary  configuration cruft and configure httperf
+	* configure.ac: Remove unnecessary configuration cruft and configure httperf
 	to be built in c99 mode
 
 2007-05-27  Ted Bullock <tbullock@canada.com>
